css/profile.css
/**
 * view/general styles
 */

.profile #item-nav,
.profile #sidebar {
  display: none !important;
}

.profile #content {
  float: none;
  width: 100%;
}

.profile #item-header {
  display: flex;
}

.profile #item-header-avatar {
  flex: 1;
}

.profile #item-header-avatar .avatar {
  float: none;
  margin: 0;
}

.profile #item-header #item-header-content {
  display: flex;
  flex: 4;
  margin: 0 1em;
}

.profile #item-main {
  flex: 1;
  margin-left: 1em;
}

.profile #item-main h4 {
  margin-top: 0;
}

.profile #item-meta {
  flex: 1;
  text-align: right;
}

.profile #item-meta .current {
  display: none;
}

.profile #item-meta #item-buttons > div > a {
  line-height: 1em;
}

.profile #profile-main form {
  display: flex;
}

.profile #profile-main .left {
  flex: 1;
}

.profile #profile-main .right {
  flex: 2;
}

.profile #profile-main .left > div,
.profile #profile-main .right > div {
  padding: 1em;
  background-color: #fafafa;
}

.profile #profile-main .left > div {
  margin: 1em 0.5em 1em 0;
}

.profile #profile-main .right > div {
  margin: 1em 0 1em 0.5em;
  white-space: pre-wrap;
}

.profile #profile-main .left > div h4,
.profile #profile-main .right > div h4 {
  margin: 0 0 0.5em;
}

.profile .recent-commons-activity li:first-letter {
  text-transform: capitalize;
}

.profile h4 {
  color: black;
}

/**
 * tag-cloud-like lists for interests, groups, sites
 */

.profile .wordblock ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.profile .wordblock li {
  display: block;
  margin: 0.25em 0;
}

.profile .wordblock li a {
  display: block;
  padding: 0.25em;
  text-decoration: none;
}

.profile .wordblock li a:hover {
  text-decoration: underline;
}

.profile #item-header #edit {
  /*color: #07d;*/ /* leave this up to theme */
  margin: 0.5em 0 0;
}

/**
 * edit-specific styles
 */

.profile-edit #profile-main .left > div,
.profile-edit #profile-main .right > div {
  white-space: inherit;
}

.profile-edit .hidden,
.profile-edit .editable > label,
.profile-edit #profile-main form .radio {
  display: none;
}

.profile-edit .editable {
  position: relative;
}

.profile-edit .visibility {
  position: absolute;
  top: 1em;
  right: 1em;
}

.profile-edit .collapsed > input,
.profile-edit .collapsed > div {
  display: none;
}

.profile-edit .edit-action-bar {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: #cc0033;
  text-align: center;
  z-index: 1;
}

.profile-edit .academic-interests .description {
  margin-bottom: 0.5em;
}

.profile-edit .js-basic-multiple-tags {
  width: 100%;
}


/* social link icon labels */

.profile #item-main .username .social-label,
.profile #item-main .twitter .social-label,
.profile #item-main .orcid .social-label,
.profile #item-main .facebook .social-label,
.profile #item-main .linkedin .social-label,
.profile #item-main .website .social-label {
  display: none;
}

.profile #item-main .username a::before,
.profile #item-main .twitter a::before,
.profile #item-main .orcid a::before,
.profile #item-main .facebook a::before,
.profile #item-main .linkedin a::before,
.profile #item-main .website a::before {
  background-repeat: no-repeat;
  background-size: contain;
  content: "";
  display: inline-block;
  height: 14px;
  padding-right: 4px;
  position: relative;
  top: 3px;
  width: 14px;
}

.profile #item-main .username a::before {
  background-image: url( '../assets/img/hc_july8_smaller.png' );
}
.profile #item-main .twitter a::before {
  background-image: url( '../assets/img/Twitter_Logo_Blue.png' );
}
.profile #item-main .orcid a::before {
  background-image: url( '../assets/img/iD-icon.png' );
}
.profile #item-main .facebook a::before {
  background-image: url( '../assets/img/FB-f-Logo__blue_29.png' );
}
.profile #item-main .linkedin a::before {
  background-image: url( '../assets/img/In-2C-14px.png' );
}
.profile #item-main .website a::before {
  background-image: url( '../assets/img/www-icon.png' );
}


@media screen and (max-width: 721px)  {

  .profile #profile-main form {
    display: block;
  }

  .profile #profile-main .left > div,
  .profile #profile-main .right > div {
    margin: 1em 0;
  }

  .profile #item-header #item-header-content {
    display: block;
  }

  .network-profile #item-header {
    margin: 0;
  }

  body.bp-user #buddypress div#item-header div#item-header-content {
    margin-left: 0;
  }

  .profile #buddypress div#item-header div#item-meta {
    margin: 1em 0 0;
  }

  .profile #item-meta {
    text-align: inherit;
  }

  .profile .avatar-wrap {
    float: none;
    height: 60px;
    width: 60px;
  }

  .profile #buddypress div#item-header #item-buttons {
    margin: 0;
    padding: 0;
    width: auto;
  }

  .profile .network-profile #item-header {
    margin: 1em 2em;
  }

}

